--- a/netlify.toml
+++ b/netlify.toml
@@ -16,15 +16,15 @@
   status = 200
 
 [context.production.environment]
-  VITE_API_BASE_URL = "https://your-backend-domain.com"
-  VITE_EMAILJS_SERVICE_ID = "your_production_service_id"
-  VITE_EMAILJS_TEMPLATE_ID = "your_production_template_id"
-  VITE_EMAILJS_PUBLIC_KEY = "your_production_public_key"
-  VITE_API_KEY = "your_production_api_key"
+  VITE_API_BASE_URL = "https://sail-express-backend.netlify.app"
+  VITE_EMAILJS_SERVICE_ID = "service_2pvwjlu"
+  VITE_EMAILJS_TEMPLATE_ID = "template_zsvj9hf"
+  VITE_EMAILJS_PUBLIC_KEY = "TbjT6n2_nnUAvsSbf"
+  VITE_API_KEY = "your-secret-key-12345"
 
 [context.deploy-preview.environment]
-  VITE_API_BASE_URL = "https://your-staging-backend.com"
-  VITE_EMAILJS_SERVICE_ID = "your_staging_service_id"
-  VITE_EMAILJS_TEMPLATE_ID = "your_staging_template_id"
-  VITE_EMAILJS_PUBLIC_KEY = "your_staging_public_key"
-  VITE_API_KEY = "your_staging_api_key" 
+  VITE_API_BASE_URL = "https://sail-express-backend.netlify.app"
+  VITE_EMAILJS_SERVICE_ID = "service_2pvwjlu"
+  VITE_EMAILJS_TEMPLATE_ID = "template_zsvj9hf"
+  VITE_EMAILJS_PUBLIC_KEY = "TbjT6n2_nnUAvsSbf"
+  VITE_API_KEY = "your-secret-key-12345" 
