--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,2 @@
-[build]
-  publish = "dist"
-  command = "npm run build"
-
-[build.environment]
-  NODE_VERSION = "18"
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200 
+# 已迁移到Railway部署，此文件不再需要
+# 保留此文件仅作为备份参考 
