--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,11 @@
-# 已迁移到Railway部署，此文件不再需要
-# 保留此文件仅作为备份参考 
+[build]
+  publish = "dist"
+  command = "npm run build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[build.environment]
+  NODE_VERSION = "18" 
